--- a/app/src/main/res/layout/activity_solution.xml
+++ b/app/src/main/res/layout/activity_solution.xml
@@ -46,16 +46,16 @@
         app:layout_constraintTop_toBottomOf="@id/title"
         tools:text="문제 해결법" />
 
-    <ImageButton
-        android:id="@+id/field_button_menu"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="@android:color/transparent"
-        android:src="@drawable/ic_menu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <ImageButton-->
+<!--        android:id="@+id/field_button_menu"-->
+<!--        android:layout_width="48dp"-->
+<!--        android:layout_height="48dp"-->
+<!--        android:layout_marginTop="15dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:backgroundTint="@android:color/transparent"-->
+<!--        android:src="@drawable/ic_menu"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <!-- 스크롤 -->
     <ScrollView
@@ -163,6 +163,16 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
+
+    <View
+        android:id="@+id/shadow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/general_theme_black"
+        android:alpha="0.5"
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <include
         android:id="@+id/layout_cs"
