--- a/app/src/main/res/layout/dialog_profile_exit.xml
+++ b/app/src/main/res/layout/dialog_profile_exit.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="viewmodel"
+            type="com.gachon.ttuckttak.ui.setting.SettingsProfileViewmodel" />
+    </data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:background="@drawable/box_alert">
@@ -31,6 +40,7 @@
         android:text="@string/undo"
         android:textColor="@color/general_theme_white"
         android:textSize="18sp"
+        android:onClick="@{() -> viewmodel.goBack()}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,3 +49,5 @@
         app:layout_constraintWidth_percent="0.883" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
