[REFACTOR] 약관 체크박스 크기 조절

--- a/app/src/main/res/layout/dialog_agree_terms.xml
+++ b/app/src/main/res/layout/dialog_agree_terms.xml
@@ -20,8 +20,7 @@
 
     <CheckBox
         android:id="@+id/checkbox_agree_terms"
-        android:background="@drawable/ic_confirm"
-        android:button="@null"
+        android:button="@drawable/ic_confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -57,8 +56,7 @@
 
         <CheckBox
             android:id="@+id/checkbox_use_terms"
-            android:background="@drawable/ic_confirm"
-            android:button="@null"
+            android:button="@drawable/ic_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="9dp"
@@ -83,8 +81,7 @@
 
         <CheckBox
             android:id="@+id/checkbox_promote_terms"
-            android:background="@drawable/ic_confirm"
-            android:button="@null"
+            android:button="@drawable/ic_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="84dp"
