[REFACTOR] 시작하기 버튼 위치 고정 및 폰트 적용

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -21,6 +21,9 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bg_rectangle_round"
             android:backgroundTint="@color/general_theme_white"
+            android:fontFamily="@font/noto_sans_kr_regular"
+            android:textFontWeight="700"
+            android:gravity="center"
             android:text="@string/start"
             android:onClick="@{() ->viewmodel.goNext()}"
             android:textColor="@color/main_theme_blue"
