--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,9 +19,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/transparent"
-            android:src="@drawable/ic_setting"
             android:contentDescription="settingButton"
             android:onClick="@{() -> viewmodel.startSettingsActivity()}"
+            android:src="@drawable/ic_setting"
             app:layout_constraintBottom_toTopOf="@id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/textView"
@@ -46,6 +46,7 @@
             android:id="@+id/lottieView"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:scaleType="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,9 +60,9 @@
             android:layout_width="230dp"
             android:layout_height="230dp"
             android:background="@drawable/circle"
-            android:src="@drawable/img_logo"
-            android:onClick="@{() -> viewmodel.startProblemCategoryActivity()}"
             android:contentDescription="ttukttakButton"
+            android:onClick="@{() -> viewmodel.startProblemCategoryActivity()}"
+            android:src="@drawable/img_logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
