--- a/app/src/main/res/layout/dialog_email.xml
+++ b/app/src/main/res/layout/dialog_email.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="260dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/box_alert">
 
     <TextView
@@ -41,6 +41,8 @@
         android:layout_height="56dp"
         android:layout_marginTop="38dp"
         android:text="@string/certification_resend"
+        android:layout_marginBottom="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_reconfirm_email" />
