--- a/app/src/main/res/layout/activity_join_part2.xml
+++ b/app/src/main/res/layout/activity_join_part2.xml
@@ -38,9 +38,11 @@
         android:scaleType="centerInside"
         android:src="@drawable/ic_arrow_left"
         app:layout_constraintBottom_toBottomOf="@id/textview_join_membership"
-        app:layout_constraintEnd_toStartOf="@id/textview_join_membership"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/textview_join_membership" />
+        app:layout_constraintTop_toTopOf="@id/textview_join_membership"
+        app:layout_constraintVertical_bias="0.05" />
 
     <TextView
         android:id="@+id/textview_send_certification"
