--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -44,10 +44,12 @@
                 android:onClick="@{() -> viewmodel.goBack()}"
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_arrow_left"
-                app:layout_constraintBottom_toBottomOf="@+id/textview_ChangeSettings"
-                app:layout_constraintEnd_toStartOf="@+id/textview_ChangeSettings"
+                app:layout_constraintBottom_toBottomOf="@id/textview_ChangeSettings"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.07"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textview_ChangeSettings" />
+                app:layout_constraintTop_toTopOf="@id/textview_ChangeSettings"
+                app:layout_constraintVertical_bias="0.05" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layout_profile"
