--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:fontFamily="@font/noto_sans_kr_bold"
-            android:text="@string/text_start"
+            android:text="제목"
             android:textColor="@color/general_theme_white"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/imagebutton_start"
